[be] refactor